# CppLib

./: .clang-format  .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: CppLibCompileFlags.cmake
docs/: CMakeLists.txt
example/: CMakeLists.txt
example/Console/: main.cpp
example/ConsoleColor/: CMakeLists.txt
example/ConsoleCursor/: CMakeLists.txt  main.cpp
include/cpp/: AnonymousName.hpp  Assert.hpp  Assume.hpp  At.hpp  BeginEndMacro.hpp  Bit.hpp  BreakIntoDebugger.hpp  Compiler.hpp  Console.hpp  ConsoleColor.hpp  CppLib.hpp  CurrentFunction.hpp  Debug.hpp  Glue.hpp  Inline.hpp  Likely.hpp  NamedType.hpp  NonCopyable.hpp  OS.hpp  SourceLine.hpp  StreamScopeGuard.hpp  Stringify.hpp  Versioning.hpp  Warning.hpp
test/: CMakeLists.txt
test/include/: doctest.h
test/src/: AnonymousName.test.cpp  AnonymousName_test.cpp  Assert_test.cpp  Assume.test.cpp  At_test.cpp  Bit.test.cpp  Console.test.cpp  CppLib.test.cpp  CppLib_test.cpp  NamedType.test.cpp  NamedType_test.cpp  main.cpp
